# sync-memo

./: .gitignore  .sync-memo-config.json  Cargo.toml  README.md  log_config.yaml  memo-1.md  memo-2.md  memo.md
src/: client.rs  daemon.rs  github.rs  handler.rs  main.rs  watcher.rs
